{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 40,
  "lineage": "57d6a991-24a8-0ce1-0781-6e211ef7eec3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "EgressOnlyGateway_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-033a2594fa7898e2e",
            "tags": {
              "Name": "EgressOnlyGateway_Terraform"
            },
            "tags_all": {
              "Name": "EgressOnlyGateway_Terraform"
            },
            "vpc_id": "vpc-0a80782049ccfb293"
          },
          "dependencies": [
            "aws_vpc.Vpc_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:internet-gateway/igw-0a43d34bf4f9ea81d",
            "id": "igw-0a43d34bf4f9ea81d",
            "owner_id": "533267142840",
            "tags": {
              "Name": "IGW_Terraform"
            },
            "tags_all": {
              "Name": "IGW_Terraform"
            },
            "vpc_id": "vpc-0a80782049ccfb293"
          },
          "dependencies": [
            "aws_vpc.Vpc_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Routetable_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:route-table/rtb-0b6d454f094ca837b",
            "id": "rtb-0b6d454f094ca837b",
            "owner_id": "533267142840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-033a2594fa7898e2e",
                "gateway_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a43d34bf4f9ea81d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Routetable_Terraform"
            },
            "tags_all": {
              "Name": "Routetable_Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a80782049ccfb293"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_egress_only_internet_gateway.EgressOnlyGateway_Terraform",
            "aws_internet_gateway.IGW_Terraform",
            "aws_vpc.Vpc_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Routetable_Association_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066ab9e898c92d764",
            "route_table_id": "rtb-0b6d454f094ca837b",
            "subnet_id": "subnet-0c93b30195adb0fb3"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.EgressOnlyGateway_Terraform",
            "aws_internet_gateway.IGW_Terraform",
            "aws_route_table.Routetable_Terraform",
            "aws_subnet.VPc_Pub_Subnet_Terraform",
            "aws_vpc.Vpc_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MySG_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:security-group/sg-0b20d47d92356a763",
            "description": "Allow 22,80,443 inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0b20d47d92356a763",
            "ingress": [],
            "name": "MySG_Terraform",
            "name_prefix": "",
            "owner_id": "533267142840",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySG_Terraform"
            },
            "tags_all": {
              "Name": "MySG_Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a80782049ccfb293"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Vpc_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "VPc_Pub_Subnet_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:subnet/subnet-0c93b30195adb0fb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c93b30195adb0fb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267142840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPc_Pub_Subnet_Terraform"
            },
            "tags_all": {
              "Name": "VPc_Pub_Subnet_Terraform"
            },
            "vpc_id": "vpc-0a80782049ccfb293"
          },
          "dependencies": [
            "aws_vpc.Vpc_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Vpc_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:vpc/vpc-0a80782049ccfb293",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-053ede3e6389a8ef1",
            "default_route_table_id": "rtb-0956116e62f410de3",
            "default_security_group_id": "sg-0208184134c38f304",
            "dhcp_options_id": "dopt-0d3ca9201bf9e6474",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a80782049ccfb293",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0956116e62f410de3",
            "owner_id": "533267142840",
            "tags": {
              "Name": "Vpc_Terraform"
            },
            "tags_all": {
              "Name": "Vpc_Terraform"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:security-group-rule/sgr-0e16170ddbefb9848",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e16170ddbefb9848",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b20d47d92356a763",
            "security_group_rule_id": "sgr-0e16170ddbefb9848",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.MySG_Terraform",
            "aws_vpc.Vpc_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:security-group-rule/sgr-0263ddc6394740b86",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0263ddc6394740b86",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b20d47d92356a763",
            "security_group_rule_id": "sgr-0263ddc6394740b86",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.MySG_Terraform",
            "aws_vpc.Vpc_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_inbound_port_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:security-group-rule/sgr-0e0c753ca98574bd7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0e0c753ca98574bd7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b20d47d92356a763",
            "security_group_rule_id": "sgr-0e0c753ca98574bd7",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.MySG_Terraform",
            "aws_vpc.Vpc_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_inbound_port_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:security-group-rule/sgr-093f9e98e489313dc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-093f9e98e489313dc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b20d47d92356a763",
            "security_group_rule_id": "sgr-093f9e98e489313dc",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.MySG_Terraform",
            "aws_vpc.Vpc_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_inbound_port_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:security-group-rule/sgr-0ef7d7bd35d4b728d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ef7d7bd35d4b728d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b20d47d92356a763",
            "security_group_rule_id": "sgr-0ef7d7bd35d4b728d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.MySG_Terraform",
            "aws_vpc.Vpc_Terraform"
          ]
        }
      ]
    }
  ]
}